--- a/src/DL.SCA.Web.AppA/Views/Shared/_Layout.cshtml
+++ b/src/DL.SCA.Web.AppA/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
             </div>
         </nav>
     </header>
-    <main class="container">
+    <main class="container mt-4">
         @RenderBody()
     </main>
 
