--- a/src/DL.SCA.Web.AppA/Views/Shared/_Layout.cshtml
+++ b/src/DL.SCA.Web.AppA/Views/Shared/_Layout.cshtml
@@ -19,25 +19,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="home" asp-action="index">
-                    Web App A
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="home" asp-action="index">
-                                Home
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        @await Component.InvokeAsync("SiteHeader")
     </header>
     <main class="container mt-4">
         @RenderBody()
