--- a/src/DL.SCA.Web.AppA/Views/Account/Login.cshtml
+++ b/src/DL.SCA.Web.AppA/Views/Account/Login.cshtml
@@ -19,6 +19,9 @@
                 <label asp-for="Password"></label>
                 <input class="form-control" asp-for="Password" />
                 <span class="form-text" asp-validation-for="Password"></span>
+                <small class="form-text text-muted">
+                    Please use this random generated password: c@KNUsA8q9CLdsfA
+                </small>
             </div>
             <div class="form-group">
                 <div class="custom-control custom-switch">
